<resources>
    <string name="app_name" translatable="false">Calculator Plus</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_history">History</string>
    <string name="show_tutorial">Show Tutorial</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Calculation Exception errors -->
    <string name="invalid">Invalid expression</string>
    <string name="divide_by_zero">Cannot divide by 0</string>
    <string name="value_too_large">Value too large</string>
    <string name="domain_error">Domain error</string>
    <string name="calculation_timeout">Calculation timed out</string>
    <string name="calculating">Calculating…</string>
    <string name="error">Error</string>

    <!-- Menu and Tutorial String -->
    <string name="settings_share">Share</string>
    <string name="deg" translatable="false">DEG</string>
    <string name="share_error">Cannot share invalid expression</string>
    <string name="choose">Choose</string>
    <string name="delete_button">Delete Button</string>
    <string name="delete_button_desc">Simply LONG PRESS DELETE button to clear the calculator screen</string>
    <string name="angle_button">Angle Button</string>
    <string name="angle_button_desc">This is the angle button. Click here to change angle from DEGREES to RADIANS and vice versa.</string>
    <string name="options_menu">Options Menu</string>
    <string name="options_menu_desc">This is options menu. This will help you to change app settings and preferences. Click here to open the menu.</string>
    <string name="share_button">Share Button</string>
    <string name="share_button_desc">This is the share button. Click here to share your equations.</string>
    <string name="memory_store">Memory Store</string>
    <string name="memory_store_desc">This is memory store button. It will store the current result in the memory.</string>
    <string name="memory_restore">Memory Restore</string>
    <string name="memory_restore_desc">This is memory restore button. It will put the result from the memory onto the screen.</string>

    <!-- Settings string -->
    <string name="user_interface">User Interface</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="general">General</string>
    <string name="smart_calculation">Smart Calculation</string>
    <string name="smart_calculation_desc">Enables auto complete equation</string>
    <string name="number_separator">Number Separator</string>
    <string name="answer_precision">Answer Precision</string>
    <string name="delete_history">Auto Delete History</string>
    <string name="never">Never</string>
    <string name="app">App</string>
    <string name="share">Share</string>
    <string name="share_desc">Share this app</string>
    <string name="rate">Rate the app</string>
    <string name="rate_desc">Add a quick app review</string>
    <string name="bug">Report a problem</string>
    <string name="bug_desc">Report a bug to the developer</string>
    <string name="contact">Email</string>
    <string name="contact_desc">Send me a feedback</string>
    <string name="follow">Follow me</string>
    <string name="follow_desc">Follow me on twitter</string>
    <string name="whats_new">What\'s new?</string>
    <string name="join_beta">Join the beta program</string>
    <string name="join_beta_desc">Help test pre-release features</string>
    <string name="open_source">Open-source licenses</string>
    <string name="open_source_desc">Third-party library licenses</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="privacy_policy_desc">How we handle your data</string>
    <string name="version">Version</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="terms_of_use_desc">Usage terms and conditions</string>
    <string name="no_history">No History</string>
    <string name="arrow">Arrow</string>
    <string name="clear">Clear</string>
    <string name="choose_theme">Choose theme</string>
    <string name="haptic_feedback">Haptic Feedback</string>
    <string name="choose_haptic_feedback">Choose haptic feedback</string>
    <string name="choose_number_separator">Choose number separator</string>
    <string name="set_answer_precision">Set answer precision</string>
    <string name="current_precision">Current precision</string>
    <string name="precision">Precision</string>
    <string name="accent_color">Accent Color</string>
    <string name="select_accent_color">Select accent color</string>

    <string name="hidden_settings">Hidden Settings</string>
    <string name="hidden_disable_ads">Disable Ads</string>
    <string name="hidden_disable_ads_desc">This will disable all ads in the app</string>
</resources>